...
            </objects>
            <point key="canvasLocation" x="-1304" y="-2748"/>
        </scene>
        <!--Account-->
        <scene sceneID="74F-YN-StF">
            <objects>
                <viewControllerPlaceholder storyboardName="Account" id="l5u-SJ-P5f" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="Whs-pg-dCO"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="0Et-ia-Ge9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-2014" y="-2205"/>
        </scene>
        <!--Collectibles-->
        <scene sceneID="p40-iv-Wjo">
            <objects>
                <viewControllerPlaceholder storyboardName="Collectibles" id="sJC-Zu-9Wu" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="eWd-gs-BJH"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="gMK-Qr-uWe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1685" y="-2205"/>
        </scene>
        <!--Activity-->
        <scene sceneID="vmJ-6B-dTg">
            <objects>
                <viewControllerPlaceholder storyboardName="Activity" id="ERx-el-q4i" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="sQm-xX-6MW"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Dik-jD-R4k" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-947" y="-2205"/>
        </scene>
...
            </objects>
            <point key="canvasLocation" x="-132" y="-2527"/>
        </scene>
        <!--Discover-->
        <scene sceneID="iYF-dS-aIN">
            <objects>
                <viewControllerPlaceholder storyboardName="Discover" id="TIR-Qd-Mky" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="oQy-V1-MrU"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="nMw-ac-n19" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-596" y="-2205"/>
        </scene>
...
