...
//

import UIKit

class Toast {
	
	public static let shared = Toast()
	
	private var toastView: UIView = UIView(frame: CGRect(x: 0, y: 0, width: 1, height: 1))
	private var toastLabel: UILabel = UILabel(frame: CGRect(x: 0, y: 0, width: 1, height: 1))
	
	private init() {
		toastView = UIView(frame: CGRect(x: 0, y: 0, width: 100, height: 34))
...
