...
			.init(AddCellData(image: UIImage(named: "btnAddKnockout"), title: "Add account to existing wallet", subtitle: "Add another account to the same recovery phrase", isExpandable: false, isTopLevel: true, option: "account"))
		],
		[
			.init(AddCellData(image: UIImage(named: "ArrowOval"), title: "Create a New Wallet", subtitle: "Create a brand new wallet", isExpandable: true, isTopLevel: true, option: nil))
		],
		[
			.init(AddCellData(image: UIImage(named: "AddNewAccount"), title: "Add Existing Wallet", subtitle: "Import a wallet you've previously setup", isExpandable: true, isTopLevel: true, option: nil))
		]
	]
	
	let innerOptions: [[AnyHashableSendable]] = [
		[],
		[
...
