...
            <objects>
                <viewController storyboardIdentifier="LoginViewController" id="omX-7m-ObT" customClass="LoginViewController" customModule="Kukai_Mobile" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="u9M-Lq-H2Y">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Kukai Passcode" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Soc-0C-Sxc">
                                <rect key="frame" x="16" y="223" width="382" height="36"/>
                                <fontDescription key="fontDescription" name="Figtree-Bold" family="Figtree" pointSize="30"/>
                                <color key="textColor" name="Txt2"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="baN-I4-8nc">
...
